Remove -XX:+AggressiveOpts from JVM options, close #3807
Motivation:

-XX:+AggressiveOpts was deprecated in JDK11 and dropped in JDK13.

Modification:

Remove from gatling.bat and gatling.sh

Result:

Gatling bundle launch scripts work with JDK13